--- a/Example/Example/Info.plist
+++ b/Example/Example/Info.plist
@@ -60,5 +60,8 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>UIFileSharingEnabled</key>
+    <true/>
+
 </dict>
 </plist>
