--- a/Example/Podfile
+++ b/Example/Podfile
@@ -5,8 +5,8 @@ target 'Example' do
   platform :ios, '13.0'
   use_frameworks!
   
-    pod 'iEasy', :git => 'https://github.com/nativejong/iEasy.git'
-    #pod 'iEasy', :path => '/Users/jblaine/wow/iEasy/Universe/iEasy.podspec'
+    #pod 'iEasy', :git => 'https://github.com/nativejong/iEasy.git'
+    pod 'iEasy', :path => '/Users/jblaine/wow/iEasy/Universe/iEasy.podspec'
 
     post_install do |installer|
         installer.pods_project.targets.each do |target|
